Update stylesheet loading order to fix minor layout issue

--- a/app/assets/stylesheets/_layout.css.scss
+++ b/app/assets/stylesheets/_layout.css.scss
@@ -25,6 +25,10 @@ body {
     }
 }
 
+#document {
+  margin-top: 0;
+}
+
 
 .hide-text {
   width: 1px;
